--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Bücherei Westerheim
+author: Büchereiteam Westerheim
+#email: buecherei-westerheim@gmx.de
 description: > # this means to ignore newlines until "twitter_username:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Homepage, Online-Katalog und Blog der Bücherei Westerheim (Unterallgäu)
 
 # social links
-twitter_username: jekyllrb
-github_username:  jekyll
-rss: rss
+#twitter_username: jekyllrb
+#github_username:  jekyll
+#rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
@@ -36,8 +34,9 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.html
+header_pages:
+ - "Anfahrt"
+ - "Über uns.md"
 
 # Build settings
 theme: minima
