--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
- - "Anfahrt"
- - "Über uns.md"
+ - Anfahrt.md
+ - about.md
 
 # Build settings
 theme: minima
