Unterallgäu in Beschreibung

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Bücherei Westerheim
+title: Bücherei Westerheim (Unterallgäu)
 author: Büchereiteam Westerheim
 #email: buecherei-westerheim@gmx.de
 description: > # this means to ignore newlines until "twitter_username:"
