--- a/src/Gemfile
+++ b/src/Gemfile
@@ -2,4 +2,8 @@ source "https://rubygems.org"
 
 #gem "fastimage_resize", "~> 2.0"
 gem "mini_magick", "~> 4.8"
-gem "tiny_tds"
+#gem "tiny_tds", "2.1.1"
+#gem "sys-proctable"
+gem "ruby-odbc"
+gem "dbi"
+gem "dbd-odbc"
