--- a/src/top-dvd-app17.json
+++ b/src/top-dvd-app17.json
@@ -1,1 +1,1 @@
-{"last_sync":"18.09.2025, 16:49 Uhr","books":[{"mediaNum":"12016704","mediaType":"DVD","isbn":"4010324028617","author":"Becker, Jean","title":"Das Labyrinth der Wörter","numBorrowed":1,"borrowedAt":"20.09.2024"}]}
+{"last_sync":"23.09.2025, 19:19 Uhr","books":[]}
