--- a/src/top-dvd-app17.json
+++ b/src/top-dvd-app17.json
@@ -1,1 +1,1 @@
-{"last_sync":"17.11.2025, 11:05 Uhr","books":[]}
+{"last_sync":"18.11.2025, 19:32 Uhr","books":[{"mediaNum":"12016729","mediaType":"DVD","isbn":"888837869096","author":"Riedhof, Kilian","title":"Sein letztes Rennen","numBorrowed":1,"borrowedAt":"18.11.2025"}]}
